[tool.poetry]
name = "get-pubmed-papers"
version = "0.1.0"
description = "A command-line tool that fetches PubMed papers with company-affiliated authors."
authors = ["Aswin Kumar aswinkumarbg203@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
requests = ">=2.32.4,<3.0.0"

[tool.poetry.scripts]
get-papers-list = "main:main"

[[tool.poetry.packages]]
include = "get_papers"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
